--- a/src/components/LogIn.css
+++ b/src/components/LogIn.css
@@ -1,5 +1,13 @@
+.login-container {
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    object-fit: contain;
+}
 section {
-    background-color: darkblue;
     width: 100%;
     height: 80px;
     max-width: 100%;
