--- a/src/components/LogIn.css
+++ b/src/components/LogIn.css
@@ -6,10 +6,11 @@
     justify-content: center;
     align-items: center;
     object-fit: contain;
+    background-color: #404258;
 }
 section {
     width: 100%;
-    height: 80px;
+    height: 70px;
     max-width: 100%;
     min-height: 100%;
     display: flex;
@@ -21,21 +22,44 @@ section {
 form {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     flex-grow: 1;
     padding-bottom: 1rem;
 }
 
 input {
-    width: 100%;
+    width: 20%;
     height: 56px;
-    border-radius: 4px;
+    border-radius: 5px;
+    border: 0px;
     position: relative;
+    margin-left: 43%;
     background-color: rgba(255,255,255,0.3);
     transition: 0.3s all;
+    margin-bottom: 25px;
+    text-indent: 5px;
 }
-
+input::placeholder {
+    color: white;
+    opacity: 1;
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
+}
 input:hover {
-    background-color: rgba(255, 255, 255, 0.45);
+    background-color: white;
     box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.05);
   }
+
+.sign-in-button {
+    width: 20%;
+    margin-left: 43%;
+    height: 35px;
+    border-radius: 5px;
+}
+
+h4 {
+    margin-top: 30px;
+    margin-left: 43%;
+    margin-bottom: 20px;
+    font-size: 30px;
+    color: white;
+}
