--- a/src/components/LogIn.css
+++ b/src/components/LogIn.css
@@ -45,11 +45,11 @@ input::placeholder {
     font-family: 'Times New Roman', Times, serif;
 }
 input:hover {
-    background-color: white;
+    background-color: rgb(26, 33, 50);
     box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.05);
   }
 
-.sign-in-button {
+.sign-button {
     width: 20%;
     margin-left: 43%;
     height: 35px;
